# intelligence-crm

./: .env  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CODEBASE_OVERVIEW.md  GITHUB_SETUP.md  LICENSE  README.md  ai-test.html  create_admin.py  design.md  docker-compose.yml  mock-ai-server.py  requirements.md  requirements.txt  requirements.txt.bak  spec.md  start-services.sh  start.sh
.claude/: settings.local.json
.claude/docs/: email-tracking-system.md
docs/: AI_IMPLEMENTATION_COMPLETE.md  AI_ORCHESTRATION_SERVICE_DOCUMENTATION.md  DEVELOPMENT_GUIDE.md  PROJECT_SUMMARY.md  ROADMAP.md  system-topology.md
frontend/: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js
postman-collections/: 00-combined-all-services.json  01-communication-hub-api.json  02-crm-core-api.json  03-user-management-api.json  04-analytics-service-api.json  05-ai-orchestration-api.json  06-workflow-engine-api.json  README.md
services/user-management/: .env  Dockerfile  README.md  alembic.ini  create_admin.py  docker-compose.yml  pyproject.toml  requirements.txt
services/user-management/app/: main.py
services/user-management/app/api/: deps.py
services/user-management/app/api/v1/: auth.py  users.py
services/user-management/app/core/: config.py  database.py  security.py
services/user-management/app/models/: base.py  user.py
services/user-management/app/schemas/: user.py
services/user-management/migrations/: env.py
services/user-management/migrations/versions/: 001_initial.py
(+317 files in other folders)
